--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
 sonar.projectKey=org.sonarqube:scmgalaxy1
-sonar.projectName=NokiaX
+sonar.projectName=NBIOT
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
