Sonar branch added for develop branch to scan
Sonar branch added for develop branch to scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,6 @@ sonar.java.binaries=compiled
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+# Sonar Branch for the Develop
+sonar.branch.name=develop
