--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,6 @@ sonar.java.binaries=compiled
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+# Analysis for the Branch wise
+sonar.branch.name=master
